[gd_scene load_steps=2 format=3 uid="uid://b6tmly82k3jj4"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_pi265"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -36.0
offset_top = -50.0
offset_right = 36.0
offset_bottom = 50.0
script = ExtResource("1_pi265")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESET"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
